[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
shared = { path = "../shared" }
url = "2.2"
futures-util = "0.3"